# practical-mcp

./: README.md  meta_stock_analysis.md  pyproject.toml
.cursor/: mcp.json
src/mcp_client/: sse_client.py  stdio_client.py
src/mcp_server/: __init__.py  asset_price.py  cal_server.py  fetcher.py  weather_mcp.py
